// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactComponentNodeRender_match_snapshots 1`] = `
<div>
  <div
    id="some_dummy_component"
  />
</div>
`;

exports[`ReactComponentNodeRender_match_snapshots_with_children 1`] = `
<div>
  <div
    id="some_dummy_component"
  >
    <span />
  </div>
</div>
`;
